syntax = "proto3";

package wso2.discovery.subscription;

option go_package = "github.com/envoyproxy/go-control-plane/wso2/discovery/subscription;subscription";
option java_package = "org.wso2.choreo.connect.discovery.subscription";
option java_outer_classname = "ApplicationPolicyProto";
option java_multiple_files = true;

// [#protodoc-title: ApplicationPolicy]

// ApplicationPolicy data model
message ApplicationPolicy {
    int32 id = 1;
	int32 tenantId = 2;
	string name = 3;
	string quotaType = 4;
}
